add responsive demo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^3.26.0
   get_storage:
+  responsive_builder:
 
 dev_dependencies:
   flutter_test:
